Can add inventories to users
